--- a/components/builder-web/package.json
+++ b/components/builder-web/package.json
@@ -43,6 +43,7 @@
     "@angular/platform-browser-dynamic": "^4.3.4",
     "@angular/router": "^4.3.4",
     "@ngrx/effects": "^4.0.5",
+    "@ngrx/platform": "git@github.com:ngrx/platform.git",
     "@ngrx/store": "^4.0.3",
     "ansi_up": "^1.3.0",
     "blueimp-md5": "^2.7.0",
