--- a/components/builder-sessionsrv/Cargo.toml
+++ b/components/builder-sessionsrv/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 doc = false
 
 [dependencies]
+builder_core = { path = "../builder-core" }
 clippy = {version = "*", optional = true}
 bitflags = "*"
 env_logger = "*"
