--- a/components/builder-web/package.json
+++ b/components/builder-web/package.json
@@ -65,7 +65,9 @@
     "css-loader": "^0.28.1",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^0.10.0",
+    "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^2.29.0",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "^2.6.4",
