--- a/components/builder-web/package.json
+++ b/components/builder-web/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "webpack-dashboard -- npm serve",
+    "start": "webpack-dashboard -- npm run serve",
     "serve": "webpack-dev-server --port=3000",
     "build": "webpack",
     "test": "karma start ./karma.conf.js",
